# weflai_project_work

./: Script WeFlai.sql
weflai/: .gitignore  README.md  Script WeFlai.sql  appunti.ipynb  pyproject.toml  requirements.txt  ticket_emesso.json
weflai/src/weflai/: main.py  main_test.py  models.py
weflai/src/weflai/crews/booking_crew/: booking_crew.py
weflai/src/weflai/crews/booking_crew/config/: tasks_booking.yaml
weflai/src/weflai/crews/cancellation_crew/: cancellation_crew.py
weflai/src/weflai/crews/cancellation_crew/config/: agents.yaml  tasks_cancellation.yaml
weflai/src/weflai/crews/flight_crew/: Weflai_cancellazione_rew.py  Weflai_crew.py  Weflai_crew_di_cancellazione.py  Weflai_inserimento_crew.py
weflai/src/weflai/crews/flight_crew/config/: agents.yaml  tasks._cancellazione.yaml  tasks._inserimento.yaml  tasks.yaml
weflai/src/weflai/crews/info_crew/: info_crew.py
weflai/src/weflai/crews/info_crew/config/: agents.yaml  tasks_info.yaml
weflai/src/weflai/tools/: db_tools.py  rag_tools.py
