[project]
name = "weflai"
version = "0.1.0"
description = "weflai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai",
    "crewai-tools",
    "langchain_community",
    "psycopg2-binary",
    "litellm",
    "chromadb>=1.1.1",
]

[project.scripts]
kickoff = "weflai.main:kickoff"
run_crew = "weflai.main:kickoff"
plot = "weflai.main:plot"
run_with_trigger = "weflai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
